exploring contrast contrib. on tum. seg. part 1

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Logging level is: DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.logger import Logger\n",
     "logger = Logger(log_level='DEBUG')"
@@ -32,14 +40,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] PARAMETERS\n",
+      "-----------------\n",
+      "[INFO] RUN_ID: 0\n",
+      "[INFO] MASK_CODE: 1\n",
+      "[INFO] MAX_EPOCHS: 2\n",
+      "[INFO] TRAIN_DATA_SIZE: 6\n",
+      "[INFO] BATCHSIZE_TRAIN: 2\n",
+      "[INFO] VAL_INTERVAL: 1\n",
+      "[INFO] RANDOM_SEED: 0\n",
+      "[INFO] ROOT_DIR: /scratch1/sachinsa/brats_seg\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "RUN_ID = 70\n",
-    "USE_PROCESSED = True\n",
-    "ONLY_MEDIAN = True\n",
-    "DO_MASK = False\n",
+    "RUN_ID = 80\n",
+    "# USE_PROCESSED = True\n",
+    "# ONLY_MEDIAN = True\n",
+    "# DO_MASK = False\n",
+    "MASK_CODE = RUN_ID - 80\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
@@ -58,9 +85,10 @@
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
     "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
-    "logger.info(f\"USE_PROCESSED: {USE_PROCESSED}\")\n",
-    "logger.info(f\"ONLY_MEDIAN: {ONLY_MEDIAN}\")\n",
-    "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
+    "# logger.info(f\"USE_PROCESSED: {USE_PROCESSED}\")\n",
+    "# logger.info(f\"ONLY_MEDIAN: {ONLY_MEDIAN}\")\n",
+    "# logger.info(f\"DO_MASK: {DO_MASK}\")\n",
+    "logger.info(f\"MASK_CODE: {MASK_CODE}\")\n",
     "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
     "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
     "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
@@ -79,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -110,14 +138,24 @@
     "from utils.model import create_SegResNet, inference\n",
     "from utils.transforms import tumor_seg_transform_3 as data_transform\n",
     "\n",
+    "from itertools import chain, combinations\n",
+    "\n",
     "# print_config()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] /scratch1/sachinsa/brats_seg/run_0 already exists. Avoid overwrite by updating RUN_ID.\n"
+     ]
+    }
+   ],
    "source": [
     "save_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
     "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
@@ -136,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,15 +197,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Data loaded\n",
+      "[DEBUG] Length of dataset: 6, 1\n",
+      "[DEBUG] Batch-size: 2, 2\n",
+      "[DEBUG] Length of data-loaders: 3, 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home1/sachinsa/.local/lib/python3.9/site-packages/torch/utils/data/dataloader.py:557: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 7, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "  warnings.warn(_create_warning_msg(\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = BraTSDataset(\n",
     "    version='2017',\n",
-    "    processed = USE_PROCESSED,\n",
+    "    # processed = USE_PROCESSED,\n",
     "    section = 'training',\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['train']\n",
@@ -175,7 +232,7 @@
     "\n",
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
-    "    processed = USE_PROCESSED,\n",
+    "    # processed = USE_PROCESSED,\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
@@ -200,14 +257,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load masks\n",
-    "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-    "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-    "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
+    "# # Load masks\n",
+    "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+    "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+    "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Masked contrasts: ['FLAIR']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def all_subsets(arr):\n",
+    "    subsets = list(chain.from_iterable(combinations(arr, r) for r in range(0, len(arr))))\n",
+    "    return [list(subset) for subset in subsets]\n",
+    "\n",
+    "mask_indices = all_subsets([0, 1, 2, 3])[MASK_CODE]\n",
+    "show_indices = [x for x in [0, 1, 2, 3] if x not in mask_indices]\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1Gd\", \"T2w\"]\n",
+    "label_list = [\"TC\", \"WT\", \"ET\"]\n",
+    "\n",
+    "logger.info(f\"Masked contrasts: {[channels[i] for i in mask_indices]}\")"
    ]
   },
   {
@@ -226,19 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Model defined\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
-    "in_channels = 4 if ONLY_MEDIAN else 12\n",
+    "in_channels = len(show_indices)\n",
     "model = create_SegResNet(in_channels, device)\n",
     "logger.debug(\"Model defined\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,12 +377,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Beginning training...\n",
+      "----------\n",
+      "epoch 1/2\n",
+      "[INFO] 1/3, train_loss: 0.9572, data-load time: 3.3135, total-step time: 24.5934\n",
+      "[INFO] 2/3, train_loss: 0.9604, data-load time: 0.0396, total-step time: 1.5087\n",
+      "[INFO] 3/3, train_loss: 0.9779, data-load time: 0.0139, total-step time: 1.4889\n",
+      "epoch 1 average loss: 0.9652\n",
+      "[INFO] saved new best metric model at epoch: 1\n",
+      "current epoch: 1 current mean dice: 0.0160 tc: 0.0007 wt: 0.0474 et: 0.0000\n",
+      "best mean dice: 0.0160 at epoch: 1\n",
+      "time consuming of epoch 1 is: 37.1168\n",
+      "----------\n",
+      "epoch 2/2\n",
+      "[INFO] 1/3, train_loss: 0.9435, data-load time: 2.8852, total-step time: 4.3675\n",
+      "[INFO] 2/3, train_loss: 0.9483, data-load time: 0.0138, total-step time: 1.4858\n",
+      "[INFO] 3/3, train_loss: 0.9649, data-load time: 0.0369, total-step time: 1.5133\n",
+      "epoch 2 average loss: 0.9522\n",
+      "[INFO] saved new best metric model at epoch: 2\n",
+      "current epoch: 2 current mean dice: 0.0212 tc: 0.0007 wt: 0.0628 et: 0.0000\n",
+      "best mean dice: 0.0212 at epoch: 2\n",
+      "time consuming of epoch 2 is: 9.9291\n"
+     ]
+    }
+   ],
    "source": [
     "best_metric = -1\n",
     "best_metric_epoch = -1\n",
@@ -320,11 +439,11 @@
     "            train_data[\"label\"].to(device),\n",
     "            train_data[\"id\"],\n",
     "        )\n",
-    "        train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
-    "        if USE_PROCESSED and ONLY_MEDIAN:\n",
-    "            train_inputs = train_inputs[:, :4, ...]\n",
-    "        if DO_MASK:\n",
-    "            train_inputs = train_inputs*~train_mask[:,:,None,None,None]\n",
+    "        # train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
+    "        # if USE_PROCESSED and ONLY_MEDIAN:\n",
+    "        #     train_inputs = train_inputs[:, :4, ...]\n",
+    "        # if DO_MASK:\n",
+    "        train_inputs = train_inputs[:, show_indices, ...]\n",
     "        optimizer.zero_grad()\n",
     "        with torch.amp.autocast('cuda'):\n",
     "            train_outputs = model(train_inputs)\n",
@@ -354,11 +473,11 @@
     "                    val_data[\"label\"].to(device),\n",
     "                    val_data[\"id\"],\n",
     "                )\n",
-    "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
-    "                if USE_PROCESSED and ONLY_MEDIAN:\n",
-    "                    val_inputs = val_inputs[:, :4, ...]\n",
-    "                if DO_MASK:\n",
-    "                    val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
+    "                # val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
+    "                # if USE_PROCESSED and ONLY_MEDIAN:\n",
+    "                #     val_inputs = val_inputs[:, :4, ...]\n",
+    "                # if DO_MASK:\n",
+    "                val_inputs = val_inputs[:, show_indices, ...]\n",
     "                val_outputs = inference(val_inputs, model)\n",
     "                val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
     "                dice_metric(y_pred=val_outputs, y=val_labels)\n",
@@ -413,11 +532,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] train completed, best_metric: 0.0212 at epoch: 2\n",
+      "[INFO] Training time: 23.0s/ep (total: 0h 0m)\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}\")\n",
     "logger.info(f\"Training time: {total_time//MAX_EPOCHS:.1f}s/ep (total: {total_time//3600:.0f}h {(total_time//60)%60:.0f}m)\")"
@@ -426,9 +554,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv-4",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenv-4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -440,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
