exploring contrast contrib. on tum. seg. part 2

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,9 @@
       "[INFO] PARAMETERS\n",
       "-----------------\n",
       "[INFO] RUN_ID: 0\n",
-      "[INFO] MASK_CODE: 1\n",
+      "[INFO] MASK_CODE: 3\n",
       "[INFO] MAX_EPOCHS: 2\n",
-      "[INFO] TRAIN_DATA_SIZE: 6\n",
+      "[INFO] TRAIN_DATA_SIZE: None\n",
       "[INFO] BATCHSIZE_TRAIN: 2\n",
       "[INFO] VAL_INTERVAL: 1\n",
       "[INFO] RANDOM_SEED: 0\n",
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "RUN_ID = 80\n",
+    "RUN_ID = 83\n",
     "# USE_PROCESSED = True\n",
     "# ONLY_MEDIAN = True\n",
     "# DO_MASK = False\n",
@@ -76,11 +76,11 @@
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\"\n",
     "\n",
     "# test code sanity (for silly errors)\n",
-    "SANITY_CHECK = False\n",
+    "SANITY_CHECK = True\n",
     "if SANITY_CHECK:\n",
     "    RUN_ID = 0\n",
     "    MAX_EPOCHS = 2\n",
-    "    TRAIN_DATA_SIZE = 6\n",
+    "    # TRAIN_DATA_SIZE = 6\n",
     "    VAL_INTERVAL = 1\n",
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -207,17 +207,9 @@
      "output_type": "stream",
      "text": [
       "[DEBUG] Data loaded\n",
-      "[DEBUG] Length of dataset: 6, 1\n",
+      "[DEBUG] Length of dataset: 386, 97\n",
       "[DEBUG] Batch-size: 2, 2\n",
-      "[DEBUG] Length of data-loaders: 3, 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home1/sachinsa/.local/lib/python3.9/site-packages/torch/utils/data/dataloader.py:557: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 7, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-      "  warnings.warn(_create_warning_msg(\n"
+      "[DEBUG] Length of data-loaders: 193, 49\n"
      ]
     }
    ],
@@ -256,8 +248,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Temp code to load synthesized T1Gd image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset_t1gd = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    load_t1gd = True,\n",
+    "    section = 'training',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = data_transform['train']\n",
+    ")\n",
+    "\n",
+    "val_dataset_t1gd = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    load_t1gd = True,\n",
+    "    section = 'validation',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = data_transform['val']\n",
+    ")\n",
+    "\n",
+    "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
+    "\n",
+    "train_loader_t1gd = DataLoader(train_dataset_t1gd, batch_size=BATCHSIZE_TRAIN, shuffle=True, num_workers=8)\n",
+    "val_loader_t1gd = DataLoader(val_dataset_t1gd, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Masked contrasts: ['FLAIR']\n"
+      "[INFO] Masked contrasts: ['T1Gd']\n"
      ]
     }
    ],
@@ -297,6 +324,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Temp: Test T1Gd code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[429 371  22  60 128  90 143 317 238  76  97 464  73  71 381 225 308 107\n",
+      " 397 412 141 219   5 242 151 213  59  21 428 346 423 194  12 284 417 109\n",
+      " 173  61  11 364 187 312 450 255 347  75 414 199  99 172 349 211 264 102\n",
+      " 329  63 290 331 272 200 436 305 293 378 191 175  85 383 289  52 278 341\n",
+      " 328 454 335 263 248  33 357 196 229  68 298 115 448  29 223 373 214  41\n",
+      "  91 167  88 406 189 388 363]\n",
+      "[429 371  22  60 128  90 143 317 238  76  97 464  73  71 381 225 308 107\n",
+      " 397 412 141 219   5 242 151 213  59  21 428 346 423 194  12 284 417 109\n",
+      " 173  61  11 364 187 312 450 255 347  75 414 199  99 172 349 211 264 102\n",
+      " 329  63 290 331 272 200 436 305 293 378 191 175  85 383 289  52 278 341\n",
+      " 328 454 335 263 248  33 357 196 229  68 298 115 448  29 223 373 214  41\n",
+      "  91 167  88 406 189 388 363]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(val_dataset.get_ids())\n",
+    "print(val_dataset_t1gd.get_ids())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 4, 240, 240, 155])\n",
+      "torch.Size([1, 1, 240, 240, 155])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_image = val_dataset.get_with_id(429)[\"image\"].unsqueeze(0).to(device)\n",
+    "print(input_image.shape)\n",
+    "\n",
+    "input_image = val_dataset_t1gd.get_with_id(429)[\"image\"].unsqueeze(0).to(device)\n",
+    "print(input_image.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create Model, Loss, Optimizer"
    ]
   },
@@ -309,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -377,40 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] Beginning training...\n",
-      "----------\n",
-      "epoch 1/2\n",
-      "[INFO] 1/3, train_loss: 0.9572, data-load time: 3.3135, total-step time: 24.5934\n",
-      "[INFO] 2/3, train_loss: 0.9604, data-load time: 0.0396, total-step time: 1.5087\n",
-      "[INFO] 3/3, train_loss: 0.9779, data-load time: 0.0139, total-step time: 1.4889\n",
-      "epoch 1 average loss: 0.9652\n",
-      "[INFO] saved new best metric model at epoch: 1\n",
-      "current epoch: 1 current mean dice: 0.0160 tc: 0.0007 wt: 0.0474 et: 0.0000\n",
-      "best mean dice: 0.0160 at epoch: 1\n",
-      "time consuming of epoch 1 is: 37.1168\n",
-      "----------\n",
-      "epoch 2/2\n",
-      "[INFO] 1/3, train_loss: 0.9435, data-load time: 2.8852, total-step time: 4.3675\n",
-      "[INFO] 2/3, train_loss: 0.9483, data-load time: 0.0138, total-step time: 1.4858\n",
-      "[INFO] 3/3, train_loss: 0.9649, data-load time: 0.0369, total-step time: 1.5133\n",
-      "epoch 2 average loss: 0.9522\n",
-      "[INFO] saved new best metric model at epoch: 2\n",
-      "current epoch: 2 current mean dice: 0.0212 tc: 0.0007 wt: 0.0628 et: 0.0000\n",
-      "best mean dice: 0.0212 at epoch: 2\n",
-      "time consuming of epoch 2 is: 9.9291\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_metric = -1\n",
     "best_metric_epoch = -1\n",
@@ -532,20 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] train completed, best_metric: 0.0212 at epoch: 2\n",
-      "[INFO] Training time: 23.0s/ep (total: 0h 0m)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}\")\n",
     "logger.info(f\"Training time: {total_time//MAX_EPOCHS:.1f}s/ep (total: {total_time//3600:.0f}h {(total_time//60)%60:.0f}m)\")"
