--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -231,10 +231,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load masks\n",
-        "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-        "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-        "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
+        "# # Load masks\n",
+        "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+        "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+        "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
       ]
     },
     {
