--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -9,20 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 24\n",
+    "RUN_ID = 32\n",
+    "INPUT_MODALITY = \"T1_T2_FLAIR\"\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Logging level is: DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,17 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:0\")\n",
-    "model = create_UNet3D(out_channels=12, device=device)"
+    "input_filter = []\n",
+    "if INPUT_MODALITY == \"ONLY_T1\":\n",
+    "    input_filter = [1]\n",
+    "elif INPUT_MODALITY == \"T1_T2\":\n",
+    "    input_filter = [1,3]\n",
+    "elif INPUT_MODALITY == \"T1_T2_FLAIR\":\n",
+    "    input_filter = [0,1,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\")\n",
+    "out_channels = 1\n",
+    "model = create_UNet3D(len(input_filter), out_channels, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,21 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load masks\n",
-    "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-    "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-    "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)\n",
-    "all_mask_df = pd.concat([train_mask_df, val_mask_df], axis=0)\n",
-    "all_mask_df.head(2)"
+    "# # Load masks\n",
+    "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+    "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+    "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)\n",
+    "# all_mask_df = pd.concat([train_mask_df, val_mask_df], axis=0)\n",
+    "# all_mask_df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +141,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/scratch1/sachinsa/data/contr_generated/run_32/BRATS_457.nii.gz\n",
+      "/scratch1/sachinsa/data/contr_generated/run_32/BRATS_306.nii.gz\n"
+     ]
+    }
+   ],
    "source": [
     "with torch.no_grad():\n",
     "    for this_data in all_loader:\n",
@@ -124,9 +158,7 @@
     "            this_data[\"image\"].to(device),\n",
     "            this_data[\"id\"],\n",
     "        )\n",
-    "        this_mask = torch.from_numpy(all_mask_df.loc[this_ids.tolist(), :].values).to(device)\n",
-    "        this_target = this_inputs.clone()\n",
-    "        this_inputs = this_inputs*~this_mask[:,:,None,None,None]\n",
+    "        this_inputs = this_inputs[:,input_filter, ...]\n",
     "        this_outputs = inference(this_inputs, model)\n",
     "        \n",
     "        mri_array = this_outputs[0].detach().permute(1, 2, 3, 0).cpu().numpy()\n",
@@ -139,9 +171,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv-4",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenv-4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
