traiing tum.seg. on t1gd-synth

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -22,17 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Logging level is: DEBUG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.logger import Logger\n",
     "logger = Logger(log_level='DEBUG')"
@@ -40,33 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] PARAMETERS\n",
-      "-----------------\n",
-      "[INFO] RUN_ID: 0\n",
-      "[INFO] MASK_CODE: 3\n",
-      "[INFO] MAX_EPOCHS: 2\n",
-      "[INFO] TRAIN_DATA_SIZE: None\n",
-      "[INFO] BATCHSIZE_TRAIN: 2\n",
-      "[INFO] VAL_INTERVAL: 1\n",
-      "[INFO] RANDOM_SEED: 0\n",
-      "[INFO] ROOT_DIR: /scratch1/sachinsa/brats_seg\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "RUN_ID = 83\n",
-    "# USE_PROCESSED = True\n",
-    "# ONLY_MEDIAN = True\n",
-    "# DO_MASK = False\n",
-    "MASK_CODE = RUN_ID - 80\n",
+    "RUN_ID = 20\n",
+    "MASK_CODE = RUN_ID - 20\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
@@ -76,18 +47,15 @@
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\"\n",
     "\n",
     "# test code sanity (for silly errors)\n",
-    "SANITY_CHECK = True\n",
+    "SANITY_CHECK = False\n",
     "if SANITY_CHECK:\n",
     "    RUN_ID = 0\n",
     "    MAX_EPOCHS = 2\n",
-    "    # TRAIN_DATA_SIZE = 6\n",
+    "    TRAIN_DATA_SIZE = 6\n",
     "    VAL_INTERVAL = 1\n",
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
     "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
-    "# logger.info(f\"USE_PROCESSED: {USE_PROCESSED}\")\n",
-    "# logger.info(f\"ONLY_MEDIAN: {ONLY_MEDIAN}\")\n",
-    "# logger.info(f\"DO_MASK: {DO_MASK}\")\n",
     "logger.info(f\"MASK_CODE: {MASK_CODE}\")\n",
     "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
     "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
@@ -107,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -145,17 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] /scratch1/sachinsa/brats_seg/run_0 already exists. Avoid overwrite by updating RUN_ID.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
     "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
@@ -174,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,35 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] Data loaded\n",
-      "[DEBUG] Length of dataset: 386, 97\n",
-      "[DEBUG] Batch-size: 2, 2\n",
-      "[DEBUG] Length of data-loaders: 193, 49\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = BraTSDataset(\n",
     "    version='2017',\n",
-    "    # processed = USE_PROCESSED,\n",
     "    section = 'training',\n",
+    "    load_t1gd = False,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['train']\n",
     ")\n",
     "\n",
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
-    "    # processed = USE_PROCESSED,\n",
     "    section = 'validation',\n",
+    "    load_t1gd = False,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
     ")\n",
@@ -238,7 +187,7 @@
     "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
     "\n",
     "# Create data loaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True, num_workers=8)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=False, num_workers=8)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
     "\n",
     "logger.debug(\"Data loaded\")\n",
@@ -248,65 +197,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Temp code to load synthesized T1Gd image"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_dataset_t1gd = BraTSDataset(\n",
-    "    version='2017',\n",
-    "    load_t1gd = True,\n",
-    "    section = 'training',\n",
-    "    seed = RANDOM_SEED,\n",
-    "    transform = data_transform['train']\n",
-    ")\n",
-    "\n",
-    "val_dataset_t1gd = BraTSDataset(\n",
-    "    version='2017',\n",
-    "    load_t1gd = True,\n",
-    "    section = 'validation',\n",
-    "    seed = RANDOM_SEED,\n",
-    "    transform = data_transform['val']\n",
-    ")\n",
-    "\n",
-    "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
-    "\n",
-    "train_loader_t1gd = DataLoader(train_dataset_t1gd, batch_size=BATCHSIZE_TRAIN, shuffle=True, num_workers=8)\n",
-    "val_loader_t1gd = DataLoader(val_dataset_t1gd, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Load masks\n",
-    "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-    "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-    "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Masked contrasts: ['T1Gd']\n"
-     ]
-    }
-   ],
    "source": [
     "def all_subsets(arr):\n",
     "    subsets = list(chain.from_iterable(combinations(arr, r) for r in range(0, len(arr))))\n",
@@ -318,64 +212,6 @@
     "label_list = [\"TC\", \"WT\", \"ET\"]\n",
     "\n",
     "logger.info(f\"Masked contrasts: {[channels[i] for i in mask_indices]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Temp: Test T1Gd code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[429 371  22  60 128  90 143 317 238  76  97 464  73  71 381 225 308 107\n",
-      " 397 412 141 219   5 242 151 213  59  21 428 346 423 194  12 284 417 109\n",
-      " 173  61  11 364 187 312 450 255 347  75 414 199  99 172 349 211 264 102\n",
-      " 329  63 290 331 272 200 436 305 293 378 191 175  85 383 289  52 278 341\n",
-      " 328 454 335 263 248  33 357 196 229  68 298 115 448  29 223 373 214  41\n",
-      "  91 167  88 406 189 388 363]\n",
-      "[429 371  22  60 128  90 143 317 238  76  97 464  73  71 381 225 308 107\n",
-      " 397 412 141 219   5 242 151 213  59  21 428 346 423 194  12 284 417 109\n",
-      " 173  61  11 364 187 312 450 255 347  75 414 199  99 172 349 211 264 102\n",
-      " 329  63 290 331 272 200 436 305 293 378 191 175  85 383 289  52 278 341\n",
-      " 328 454 335 263 248  33 357 196 229  68 298 115 448  29 223 373 214  41\n",
-      "  91 167  88 406 189 388 363]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(val_dataset.get_ids())\n",
-    "print(val_dataset_t1gd.get_ids())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 4, 240, 240, 155])\n",
-      "torch.Size([1, 1, 240, 240, 155])\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_image = val_dataset.get_with_id(429)[\"image\"].unsqueeze(0).to(device)\n",
-    "print(input_image.shape)\n",
-    "\n",
-    "input_image = val_dataset_t1gd.get_with_id(429)[\"image\"].unsqueeze(0).to(device)\n",
-    "print(input_image.shape)"
    ]
   },
   {
@@ -394,17 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] Model defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
     "in_channels = len(show_indices)\n",
@@ -414,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,11 +324,7 @@
     "            train_data[\"label\"].to(device),\n",
     "            train_data[\"id\"],\n",
     "        )\n",
-    "        # train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
-    "        # if USE_PROCESSED and ONLY_MEDIAN:\n",
-    "        #     train_inputs = train_inputs[:, :4, ...]\n",
-    "        # if DO_MASK:\n",
-    "        train_inputs = train_inputs[:, show_indices, ...]\n",
+    "        \n",
     "        optimizer.zero_grad()\n",
     "        with torch.amp.autocast('cuda'):\n",
     "            train_outputs = model(train_inputs)\n",
@@ -530,11 +354,7 @@
     "                    val_data[\"label\"].to(device),\n",
     "                    val_data[\"id\"],\n",
     "                )\n",
-    "                # val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
-    "                # if USE_PROCESSED and ONLY_MEDIAN:\n",
-    "                #     val_inputs = val_inputs[:, :4, ...]\n",
-    "                # if DO_MASK:\n",
-    "                val_inputs = val_inputs[:, show_indices, ...]\n",
+    "\n",
     "                val_outputs = inference(val_inputs, model)\n",
     "                val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
     "                dice_metric(y_pred=val_outputs, y=val_labels)\n",
