tumseg with synth-t1gd

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 20\n",
-    "MASK_CODE = RUN_ID - 20\n",
+    "RUN_ID = 40\n",
+    "MASK_CODE = 0 #RUN_ID - 20\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
@@ -166,7 +166,7 @@
     "train_dataset = BraTSDataset(\n",
     "    version='2017',\n",
     "    section = 'training',\n",
-    "    load_t1gd = False,\n",
+    "    processed = True,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['train']\n",
     ")\n",
@@ -174,7 +174,7 @@
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
     "    section = 'validation',\n",
-    "    load_t1gd = False,\n",
+    "    processed = True,\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
     ")\n",
@@ -187,7 +187,7 @@
     "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
     "\n",
     "# Create data loaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=False, num_workers=8)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True, num_workers=8)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
     "\n",
     "logger.debug(\"Data loaded\")\n",
